7-25 fixed profile alignment for profile text

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -38,17 +38,12 @@
 }
 
 @media screen and (max-width: 480px) {
-  /* .header {
-    padding-right: 20px;
-    padding-left: 20px;
-  }  */
   .header::before {
     width: calc(100% + 40px);
   }
   .header__around-image {
     width: 126px;
     height: 24px;
-    /* margin: 28px 0 0 27px; */
     margin: 0 0 0 27px;
   }
 }
