--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -184,7 +184,7 @@
   .profile__save-button {
     width: calc(100% - 40px);
     height: 50px;
-    margin: 0 auto 36px;
+    margin: 0 auto 16px;
     text-align: center;
   }
 }
